--- a/hw3/create_data.css
+++ b/hw3/create_data.css
@@ -1,3 +1,9 @@
 body{
 	background-color: slategrey;
 }
+
+table,th,td{
+	border: .1em solid black;
+	border-collapse: collapse;
+	text-align: right;
+}
